--- a/src/views/CurrencyConverter/CurrencyConverter.module.scss
+++ b/src/views/CurrencyConverter/CurrencyConverter.module.scss
@@ -6,33 +6,25 @@
 }
 
 .inputWrapper {
-}
-
-.input {
-  height: 30px;
-  border: 1px solid #999;
-  font-size: 18px;
-  color: #1c87c9;
-  background-color: #eee;
-  border-radius: 5px;
-  box-shadow: 4px 4px #ccc;
-  padding: 0 15px;
+  &:hover {
+    transform: scale(1.01);
+  }
 }
 
 .select {
   height: 30px;
-  border: 1px solid #999;
+  border: 1px solid var(--border-color);
   font-size: 18px;
-  color: #1c87c9;
-  background-color: #eee;
+  color: var(--primary-text-color);
+  background-color: var(--background-color);
   border-radius: 5px;
-  box-shadow: 4px 4px #ccc;
+  box-shadow: 4px 4px var(--box-shadow-color);
 }
 
 .equal {
   display: flex;
   font-size: 28px;
-  color: #1c87c9;
+  color: var(--primary-text-color);
   margin: 0 auto;
   padding: 0, 15px;
 }
